config/samples/ingress_v1_ingress-2.yaml
apiVersion: ingress.nginx.kubebuilder.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes:io/ingress.class: "kubebuilder-nginx"
  labels:
    app.kubernetes.io/name: ingress-nginx-kubebuilder
    app.kubernetes.io/managed-by: kustomize
  name: ingress-nginx
  namespace: web
spec:
  # TODO(user): Add fields here
  defaultBackend:
    service:
      name: nginx-service-d
      port:
        number: 9092
