config/samples/ingress_v1_ingress-web.yaml
apiVersion: ingress.nginx.kubebuilder.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "kubebuilder-nginx"
    ingress.nginx.kubebuilder.io/use-weight: "true"
    ingress.nginx.kubebuilder.io/set-weight: "nginx-service-e:weight=80,nginx-service-d:weight=10"
  labels:
    app.kubernetes.io/name: ingress-nginx-kubebuilder
    app.kubernetes.io/managed-by: kustomize
  name: api
  namespace: web
spec:
  # TODO(user): Add fields here
  rules:
    - host: "*.k8s-web.com"
      http:
        paths:
          - path: "/"
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-service-e
                port:
                  number: 9093
          - path: "/"
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-service-d
                port:
                  number: 9092
