config/samples/ingress_v1_ingress.yaml
apiVersion: ingress.nginx.kubebuilder.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.nginx.kubebuilder.io/proxy-path: "/k8s(/|$)"
    ingress.nginx.kubebuilder.io/proxy-target: "/$1"
    ingress.nginx.kubebuilder.io/proxy-host: "ccc.com"
    kubernetes:io/ingress.class: "kubebuilder-nginx"
    #ingress.nginx.kubebuilder.io/proxy-enable-regex: "true"
    #ingress.nginx.kubebuilder.io/ssl-stapling-verify: "false"
    #ingress.nginx.kubebuilder.io/ssl-stapling: "false"
    #ingress.nginx.kubebuilder.io/enable-regex: "true"
    ingress.nginx.kubebuilder.io/rewrite-target: "/$2"
  labels:
    app.kubernetes.io/name: ingress-nginx-kubebuilder
    app.kubernetes.io/managed-by: kustomize
  name: ingress-nginx
  namespace: ingress-nginx-kubebuilder-system
spec:
  # TODO(user): Add fields here
  rules:
    - host: "*.a.com"
      http:
        paths:
          - path: "/aa/(p1|p1)(/|$)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-service-a
                port:
                  number: 9092
    - host: "b.com"
      http:
        paths:
          - path: "/bb/(p1|p1)(/|$)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-service-b
                port:
                  number: 9093
          - path: "/cc/(p1|p1)(/|$)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-service-c
                port:
                  number: 9094
